%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1107 &-8204865161071542118
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: -4376870377091445600}
    m_Position: {x: 240, y: 90, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -2142093641623021970}
    m_Position: {x: 360, y: -10, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: -4376870377091445600}
--- !u!1101 &-7580383689817193257
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: vertical
    m_EventTreshold: 0.1
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -2142093641623021970}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-4376870377091445600
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -7580383689817193257}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -798374144846273497, guid: d450cf7b0550ad01a9eb33ccb3b94246,
    type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!206 &-4284211865757456823
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BlendTree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: -445891911845219367, guid: d450cf7b0550ad01a9eb33ccb3b94246,
      type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0.1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 4657297306664439096, guid: d450cf7b0550ad01a9eb33ccb3b94246,
      type: 3}
    m_Threshold: 0.5
    m_Position: {x: -0.1, y: 0.1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -8548446669996512862, guid: d450cf7b0550ad01a9eb33ccb3b94246,
      type: 3}
    m_Threshold: 1
    m_Position: {x: 0.1, y: 0.1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  m_BlendParameter: rotx
  m_BlendParameterY: roty
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!206 &-4015534232804304017
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BlendTree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 5676354005845009803, guid: 907963af70b4e4ca4b3ec5e956815ec2,
      type: 3}
    m_Threshold: 0
    m_Position: {x: 1, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 3187457307456244178, guid: d450cf7b0550ad01a9eb33ccb3b94246,
      type: 3}
    m_Threshold: 1
    m_Position: {x: 1, y: 0}
    m_TimeScale: 20
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  m_BlendParameter: directionx
  m_BlendParameterY: directiony
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!206 &-2612395315609834366
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BlendTree
  m_Childs: []
  m_BlendParameter: vertical
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 0
--- !u!1102 &-2142093641623021970
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: New State
  m_Speed: 50
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -1423508507121622632}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 1
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -445891911845219367, guid: d450cf7b0550ad01a9eb33ccb3b94246,
    type: 3}
  m_Tag: 
  m_SpeedParameter: vertical
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1101 &-1423508507121622632
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: vertical
    m_EventTreshold: 0.1
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -4376870377091445600}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0
  m_HasExitTime: 1
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: AirplaneController
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: vertical
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: horizontal
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: directionx
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: directiony
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: -8204865161071542118}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &1104068818850913045
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BlendTree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 3187457307456244178, guid: d450cf7b0550ad01a9eb33ccb3b94246,
      type: 3}
    m_Threshold: 0
    m_Position: {x: 0.1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 5676354005845009803, guid: 907963af70b4e4ca4b3ec5e956815ec2,
      type: 3}
    m_Threshold: 0.5
    m_Position: {x: 0.1, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -445891911845219367, guid: d450cf7b0550ad01a9eb33ccb3b94246,
      type: 3}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  m_BlendParameter: directionx
  m_BlendParameterY: directiony
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 3
--- !u!206 &2787406579031680922
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: BlendTree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 3187457307456244178, guid: d450cf7b0550ad01a9eb33ccb3b94246,
      type: 3}
    m_Threshold: 0
    m_Position: {x: 1, y: 1}
    m_TimeScale: 20
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -445891911845219367, guid: d450cf7b0550ad01a9eb33ccb3b94246,
      type: 3}
    m_Threshold: 0.5
    m_Position: {x: 1, y: 0}
    m_TimeScale: 20
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -4015534232804304017}
    m_Threshold: 1
    m_Position: {x: 1, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: vertical
    m_Mirror: 0
  m_BlendParameter: vertical
  m_BlendParameterY: directionx
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 3
